--- a/Blocks/OrganizationBlock/Components/Queries/Properties/Resources.resx
+++ b/Blocks/OrganizationBlock/Components/Queries/Properties/Resources.resx
@@ -1,36 +1,30 @@
-<?xml version="1.0" encoding="utf-8"?>
-
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-    <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
-        <xsd:element name="root" msdata:IsDataSet="true">
-            
-        </xsd:element>
-    </xsd:schema>
     <resheader name="resmimetype">
         <value>text/microsoft-resx</value>
     </resheader>
     <resheader name="version">
-        <value>1.3</value>
+        <value>2.0</value>
     </resheader>
     <resheader name="reader">
-        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
     <resheader name="writer">
-        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
     <data name="Server" xml:space="preserve">
-    <value>127.0.0.1</value>
-  </data>
-  <data name="Port" xml:space="preserve">
-    <value>27017</value>
-  </data>
-  <data name="Database" xml:space="preserve">
-    <value>admin</value>
-  </data>
-  <data name="User" xml:space="preserve">
-    <value>admin</value>
-  </data>
-  <data name="Pwd" xml:space="preserve">
-    <value>admin123</value>
-  </data>
+        <value>127.0.0.1</value>
+    </data>
+    <data name="Port" xml:space="preserve">
+        <value>27017</value>
+    </data>
+    <data name="Database" xml:space="preserve">
+        <value>admin</value>
+    </data>
+    <data name="User" xml:space="preserve">
+        <value>admin</value>
+    </data>
+    <data name="Pwd" xml:space="preserve">
+        <value>admin123</value>
+    </data>
 </root>
